test_suite/tests/ui/float/derive/eq_without_partial_eq.rs
use nutype::nutype;

#[nutype(validate(finite))]
#[derive(Eq)]
pub struct Size(f32);

fn main() {}
